Changed how checker framework is compiled