@@ -12,6 +12,12 @@
 	
 	<artifactId>parties-api</artifactId>
 	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<checkerFrameworkVersion>3.11.0</checkerFrameworkVersion>
+		<errorProneVersion>9+181-r4173-1</errorProneVersion>
+	</properties>
+	
 	<build>
 		<directory>${basedir}/target</directory>
 		<plugins>
@@ -36,19 +42,131 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>properties</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+	
+	<profiles>
+		<profile>
+			<id>checkerframework</id>
+			<activation>
+				<jdk>[1.8,13)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.1</version>
+						<configuration>
+							<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
+							<compilerArguments>
+								<Xmaxerrs>10000</Xmaxerrs>
+								<Xmaxwarns>10000</Xmaxwarns>
+							</compilerArguments>
+							<annotationProcessorPaths>
+								<path>
+									<groupId>org.checkerframework</groupId>
+									<artifactId>checker</artifactId>
+									<version>3.7.0</version>
+								</path>
+							</annotationProcessorPaths>
+							<annotationProcessors>
+								<!-- Add all the checkers you want to enable here -->
+								<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
+							</annotationProcessors>
+							<compilerArgs>
+								<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.checkerframework</groupId>
+					<artifactId>checker</artifactId>
+					<version>${checkerFrameworkVersion}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		
+		<profile>
+			<id>checkerframework-jdk8</id>
+			<activation>
+				<jdk>1.8</jdk>
+			</activation>
+			<!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
+			<properties>
+				<javac.version>${errorProneVersion}</javac.version>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.google.errorprone</groupId>
+					<artifactId>javac</artifactId>
+					<version>${errorProneVersion}</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
+							<source>1.8</source>
+							<target>1.8</target>
+							<compilerArgs combine.children="append">
+								<arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		
+		<profile>
+			<id>checkerframework-jdk11</id>
+			<activation>
+				<jdk>11</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<fork>true</fork>
+							<release>11</release>
+							<compilerArgs combine.children="append">
+								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	
 	<dependencies>
 		<dependency>
 			<groupId>org.checkerframework</groupId>
 			<artifactId>checker-qual</artifactId>
-			<version>3.10.0</version>
+			<version>${checkerFrameworkVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.errorprone</groupId>
 			<artifactId>javac</artifactId>
-			<version>9+181-r4173-1</version>
+			<version>${errorProneVersion}</version>
 		</dependency>
 		
 		<dependency>
